--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
                 font-family: 'Mountains of Christmas', cursive;
                 font-size: 200%;
             }
+            input {
+                font-size: 100px;
+            }
+            .ok {
+                font-size: 100px;
+                border-width: 0;
+                border-radius: 50px;
+                background-color: black;
+                color: wheat;
+            }
+            .pwd {
+                position: relative;
+                width:500px
+            }
         </style>
 
         <!--[if lt IE 9]>
@@ -49,7 +63,7 @@
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <h3>The Story of</h3>
                     <h1>Captain Saltire</h1>
                     <p>
@@ -57,7 +71,7 @@
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         A long time ago, there lived a pirate called Captain Saltire. <br>
                         He was the most feared Pirate of the seven seas, and had plundered
@@ -65,21 +79,21 @@
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         But he had made a great many enemies. And many other pirates wanted
                         Captain Saltire's treasure for themselves.
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         To escape his enemies, Captain Saltire sailed to his Scottish homeland
                         and hid with his treasure in a remote cottage.
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         To keep his treasure safe, he made a magic map that was invisible to
                         everyone but himself.
@@ -87,21 +101,21 @@
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         Now, 500 years after he died, the map is about to show where Captain Saltire's
                         treasure lies. 
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         His enemies have heard the rumours and started heading for his cottage, ready for when the
                         map reveals the location of the treasure....
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg">
                     <p>
                         On Saturday, 12th of December at 2pm, the hunt will begin!
                     </p>
@@ -111,37 +125,34 @@
                     </p>
                 </section>
 
-                <section data-state="start" data-background="images/old-style-world-map-3.jpg" data-background-transition="slide">
+                <section data-state="start" data-background="images/treasure-map-bg.jpg">
                     <p id="placeholder">
                         The map will appear here... 
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg" data-state="maps">
+                <section data-background="images/treasure-map-bg.jpg" data-state="maps">
                     <p>
                         Placeholder for testing - Remove this when READY, leaving the first Map with data-state="maps"
                     </p>
                 </section>
 
-                <section data-background="images/treasure-map-template-3.jpg">
-                    <p>
-                        -- MAP! --
+                <section data-background="images/skeleton.jpg">
+                    <p style="position: relative; top: -100px; left: -200px;">
+                        Find Captain Saltire's skeleton, hanging in a tree.
+                        Around his neck is the password you need...
+                    </p>
+                    <p style="position:relative; top: 100px">
+                        <input id="password1" class="pwd" placeholder="password"/>
+                        <button class="ok">OK</button>
                     </p>
                 </section>
 
-                <!-- <section data-background="images/treasure-map-template-3.jpg">
+                <section data-background="images/treasure-map-bg.jpg" data-state="success">
                     <p>
-                        Enter Password!
+                        Well done!
                     </p>
-                    <input id="password1"/>
-                    <button class="ok">OK</button>
                 </section>
-
-                <section data-background="images/treasure-map-template-3.jpg" data-state="success">
-                    <p>
-                        Success!
-                    </p>
-                </section> -->
 
             </div>
 
@@ -176,7 +187,7 @@
 
             Reveal.addEventListener( 'success', function() {
                 var password1 = document.getElementById("password1").value;
-                if (password1 != "ok") {
+                if (password1 != "bones") {
                     Reveal.prev();
                 }
             }, false );
