Map fades in each time it is viewed

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 90% {opacity: 0.5;}
                 100% {opacity: 1;}
             }
-            .map {
+            .fadein .map {
                 animation: fadein 10s ease-in;
             }
         </style>
@@ -164,7 +164,7 @@
                     </p>
                 </section>
 
-                <section data-state="start" data-background="images/treasure-map-bg.jpg">
+                <section data-state="fadein" data-background="images/treasure-map-bg.jpg">
                     <img src="images/map.jpg" class="map"/>
                 </section>
 
