--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 border-radius: 50px;
                 background-color: black;
                 color: wheat;
+                position: relative;
             }
             .pwd {
                 position: relative;
@@ -55,7 +56,9 @@
                 50% {transform: rotate(0deg);}
                 100% {transform: rotate(-10deg);}
             }
-            .reveal section .parrot, .reveal section .bottle {
+            .reveal section .parrot,
+            .reveal section .bottle,
+            .reveal section .waves {
                 border-width: 0;
                 box-shadow: none;
                 background: transparent;
@@ -78,9 +81,44 @@
                 animation: fadein 10s ease-in;
             }
 
+            @keyframes bobbing {
+                0% {transform: rotate(-10deg);
+                    top: -20px;
+                }
+                25% {top: 40px;
+                }
+                50% {transform: rotate(40deg);
+                    top: -20px;
+                }
+                75% {top: 20px;
+                }
+                100% {transform: rotate(-10deg);
+                    top: -20px;
+                }
+            }
             .bottle {
                 width: 150px;
-                animation: mymove 2s infinite;
+                position: relative;
+            }
+            .bottle:nth-of-type(3n) {
+                animation: bobbing 4s infinite;
+            }
+            .bottle:nth-of-type(3n+1) {
+                animation: bobbing 6s infinite;
+            }
+            .bottle:nth-of-type(3n+2) {
+                animation: bobbing 3s infinite;
+            }
+            .sea {
+                display: flex;
+                justify-content: space-around;
+                height: 320px
+            }
+            .waves {
+                width: 50%;
+                position: absolute;
+                bottom: 0;
+
             }
         </style>
 
@@ -224,10 +262,18 @@
                         Message in a bottle<br>
                         Enter the letters below...
                     </p>
-                    <img class="bottle" src="images/bottle.png" />
-                    <img class="bottle" src="images/bottle.png" />
-                    <img class="bottle" src="images/bottle.png" />
-                    <img class="bottle" src="images/bottle.png" />
+                    <div class="sea">
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                        <img class="bottle" src="images/bottle.png" />
+                    </div>
+
+                    <img class="waves" style="left: 0" src="images/waves.png" />
+                    <img class="waves" style="right: 0" src="images/waves.png" />
                     <p>
                         <input id="message" class="pwd" placeholder="letters"/>
                         <button class="ok">OK</button>
@@ -238,7 +284,10 @@
                         Well done!
                     </p>
                     <p>
-                        Now for your next clue...
+                        Your last clue....
+                        Captain Scarlet hid his treasure in his sailing boat.
+                        But beware the Captain's ghost that haunts any who try
+                        to take his treasure!
                     </p>
                 </section>
 
